Fix comment overflow

--- a/css/lit-callouts.css
+++ b/css/lit-callouts.css
@@ -63,6 +63,10 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 998;
 }
 
+.lit-comment>* {
+  overflow: hidden;
+}
+
 .lit section:after {
   /* callout shadow */
   position: absolute;
